--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <h1>Website under construction.</h1>
+    <p></p>
+    <a href="https://poolsuite.net/">Please hold...</a>
 </body>
 
 </html>
