--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-    <h1>Website under construction.</h1>
+    <h1>Website under construction 🔨</h1>
     <p></p>
     <a href="https://poolsuite.net/">Please hold...</a>
 </body>
